--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,1 +1,10 @@
-<<h1>Teste</h1>>
+<mat-toolbar class="header">
+  <span class="title">
+    <span class="img">
+      <img src="assets/images/logo.png" alt="logo">
+    </span>
+    <span class="subtitle">
+      <h1>Calculadora My Cafe</h1>
+    </span>
+  </span>
+</mat-toolbar>
