--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+  padding: 15px;
+  background-color: beige;
+}
+
+h1 {
+  font-size: 2vw;
+}
