--- a/src/app/components/distribuicao/distribuicao.component.html
+++ b/src/app/components/distribuicao/distribuicao.component.html
@@ -2,6 +2,7 @@
   <span>
     <h1>Distribuição por troféus</h1>
     <p>Como funciona?</p>
+    <p>Preencha o campo total de diamantes, após isso preencha o valor que cada morador alcançou no festival. O sistema irá calcular total de troféus automaticamente e a premiação de cada morador.</p>
   </span>
   <form>
     <div id="form-diamond">
