--- a/src/app/components/distribuicao/distribuicao.component.css
+++ b/src/app/components/distribuicao/distribuicao.component.css
@@ -133,6 +133,19 @@ input[type=number] {
     top: 6px;
     left:-11px;
   }
+  .item-valor-premio {
+    margin-left: 0px;
+    width: 38px;
+    background-color: none;
+    border: 1px solid black;
+    border-radius: 6px;
+    text-align: center;
+    height: 16px;
+    font-size: 13px;
+    position: relative;
+    left: 87px;
+    bottom: 15px;
+  }
   #div-total-rubis{
     display: block;
     position: relative;
@@ -143,11 +156,72 @@ input[type=number] {
   #div-cidadao{
     position: relative;
     top: 30px;
-    display: inline;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
   }
 
   .item-premiacao {
-    left: 10px;
+    left: -32px;
+    width: 100%;
+    font-size: 13px;
+    display: inline-block;
+  }
+
+  .item-rubi{
+    position: relative;
+    left: 2px;
+    display: inline-block;
+    width: 100%;
+    font-size: 13px;
+    top: -2px;
+  }
+
+  .item-valor-rubi {
+    margin-left: 0px;
+    width: 38px;
+    background-color: none;
+    border: 1px solid black;
+    border-radius: 6px;
+    text-align: center;
+    height: 16px;
+    font-size: 13px;
+    position: relative;
+    left: 64px;
+    top: -18px;
+  }
+  .input-cidadao {
+    top: -2px;
+    height: 16px;
+    position: relative;
+    border: 1px solid black;
+    margin-left: 3px;
+    width: 38px;
+    border-radius: 6px;
+    text-align: center;
+  }
+
+  .item-trofeu {
+    top: 0px;
+  }
+
+  .cidadao-id {
+    width: 66%;
+    position: relative;
+    left: 0px;
+    font-size: 13px;
+    bottom: 8px;
+  }
+
+  .span-cidadao {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+  .item-cidadao {
+    margin-bottom: 12px;
+    width: 100%;
   }
 }
 
